First Page - buttons: "Dodaj" "Usuń" "Edytuj"

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,20 @@
-<div>{{appState$ | async | json}}</div>
+<!-- <div>{{appState$ | async | json}}</div> -->
+
+
+<div class="container-xl" style="text-align: center">
+    <div class="table-responsive">
+        <div class="row" >
+            <div class="buttons" >
+                <button type="button" class="btn">
+                    Dodaj książkę
+                </button>
+                <button type="button" class="btn">
+                    Usuń książkę
+                </button>
+                <button type="button" class="btn">
+                    Edytuj książkę
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
