--- a/src/app/saveButton.component.html
+++ b/src/app/saveButton.component.html
@@ -2,7 +2,7 @@
     <div class="table-responsive">
         <div class="row" >
             <div class="buttons" >
-                <button type="button" class="btn">
+                <button type="button" class="btn" href="http://localhost:4200/add">
                     Hello World
                 </button>
             </div>
